--- a/Class-04/.env
+++ b/Class-04/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 
-DATABASE_URI = "mongodb+srv://laxmankrishnamurti:<password>@cluster0.f3hzy5j.mongodb.net"
+DATABASE_URI = "mongodb+srv://laxmankrishnamurti:CHETANAchetana&&00@cluster0.f3hzy5j.mongodb.net"
