--- a/Class-04/package.json
+++ b/Class-04/package.json
@@ -19,6 +19,7 @@
     "concat-map": "^0.0.1",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "fill-range": "^7.0.1",
     "glob-parent": "^5.1.2",
     "has-flag": "^3.0.0",
@@ -29,6 +30,7 @@
     "is-number": "^7.0.0",
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
+    "mongoose": "^8.2.2",
     "ms": "^2.1.2",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
@@ -44,7 +46,7 @@
     "yallist": "^4.0.0"
   },
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "Laxman krishnamurti",
   "license": "ISC"
