MongoDB connection is successfull

--- a/Class-04/package.json
+++ b/Class-04/package.json
@@ -46,7 +46,7 @@
     "yallist": "^4.0.0"
   },
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": "nodemon -r dotenv/config ./src/index.js"
   },
   "author": "Laxman krishnamurti",
   "license": "ISC"
