--- a/Class-04/package.json
+++ b/Class-04/package.json
@@ -12,11 +12,14 @@
     "abbrev": "^1.1.1",
     "anymatch": "^3.1.3",
     "balanced-match": "^1.0.2",
+    "bcrypt": "^5.1.1",
     "binary-extensions": "^2.3.0",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
     "chokidar": "^3.6.0",
     "concat-map": "^0.0.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -28,9 +31,11 @@
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
     "mongoose": "^8.2.2",
+    "mongoose-aggregate-paginate-v2": "^1.0.7",
     "ms": "^2.1.2",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
