--- a/Class-04/package.json
+++ b/Class-04/package.json
@@ -17,6 +17,7 @@
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
     "chokidar": "^3.6.0",
+    "cloudinary": "^2.0.3",
     "concat-map": "^0.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
     "mongoose": "^8.2.2",
     "mongoose-aggregate-paginate-v2": "^1.0.7",
     "ms": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
