--- a/Introduction to Backend/Class-04/package.json
+++ b/Introduction to Backend/Class-04/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "email-validator": "^2.0.4",
     "express": "^4.19.2",
     "mongoose": "^8.3.1"
