--- a/Introduction to Backend/Class-05/package.json
+++ b/Introduction to Backend/Class-05/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "class-05",
+  "name": "demoproject",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1"
