--- a/Node.js/Day-03/MongoDB(CRUD)/package.json
+++ b/Node.js/Day-03/MongoDB(CRUD)/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "mongodb(crud)",
+  "name": "mongodbcrudoperation",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.4"
   }
 }
